# winetranslator

./: .gitignore  APPIMAGE.md  DEVELOPMENT.md  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  README.md  RESEARCH.md  WineTranslator-x86_64.AppImage.old  build-appimage.sh  install.sh  pyproject.toml  requirements.txt  run.sh  tested_apps.json  update.sh  winetranslator.desktop
winetranslator/: __main__.py  launcher.py  main.py
winetranslator/core/: app_launcher.py  dependency_manager.py  prefix_manager.py  runner_manager.py  updater.py
winetranslator/data/: tested_apps.py
winetranslator/database/: db.py
winetranslator/gui/: add_app_dialog.py  controller_remap_dialog.py  main_window.py  preferences_dialog.py  style.css  tested_apps_view.py
winetranslator/utils/: controller_input.py  first_run.py  logger.py  wine_utils.py
